--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Javascript 1 - slutprojekt 2024</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-    
+<body id="body">
+    <!--Använder "id" för att kunna använda CSS-->
+    <div id="backgroundDiv">
+        <div id="infoDiv">
+            <img src=" " id="randomImg" alt=" ">
+            <!--bild-->
+            <!--person information-->
+        </div>
+        <div id="buttonDiv">
+            <!-- knapp för personinformation, kopplad till javascript -->
+            <button type="button" id="randomizer">Click on me!</button>
+        </div>
+    </div>
     <script src="js/script.js"></script>
+    <!--Vår Javascript kopplas här och här finns all information om hur knappen och vilken data som skall visas.-->
 </body>
 </html>
