--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <!--bild-->
             <!--person information-->
         </div>
+        <div>
+        </div>
         <div id="buttonDiv">
             <!-- knapp för personinformation, kopplad till javascript -->
-            <button type="button" id="randomizer">Click on me!</button>
+            <button type="button" id="randomizer">Click on me to get a new random person!</button>
         </div>
     </div>
     <script src="js/script.js"></script>
